include/C/ox/Ox.cs


	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValColumns(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValDuplicate2(IntPtr pvDest, IntPtr pvSrc);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern IntPtr OxValGetArray(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValGetArrayLen(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern IntPtr OxValGetArrayVal(IntPtr pv, Int32 i);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern IntPtr OxValGetBlob(IntPtr pv, ref Int32 pI1, ref Int32 pI2);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern string OxValGetClassName(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValGetDouble(IntPtr pv, ref double pdVal);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValGetInt(IntPtr pv, ref Int32 piVal);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern IntPtr OxValGetMat(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValGetMatc(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValGetMatr(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValGetMatrc(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern IntPtr OxValGetStaticObject(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern string OxValGetString(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValGetStringCopy(IntPtr pv, string s, Int32 mxlen);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValGetStringLen(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern IntPtr OxValGetVal(IntPtr pv, Int32 i);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValGetVecc(IntPtr pv, double[] vX);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValGetVecr(IntPtr pv, double[] vX);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValHasFlag(IntPtr pv, Int32 iFlag);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValHasType(IntPtr pv, Int32 iType);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValRows(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxValSetBlob(IntPtr pv, Int32 i1, Int32 i2, IntPtr p);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxValSetDouble(IntPtr pv, double dVal);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxValSetInt(IntPtr pv, Int32 iVal);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxValSetMat(IntPtr pv, IntPtr mVal, int r, int c);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxValSetMatZero(IntPtr pv, int r, int c);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxValSetNull(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxValSetString(IntPtr pv, string sVal);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxValSetVecc(IntPtr pv, double[] vX, int r, int c);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxValSetVecr(IntPtr pv, double[] vX, int r, int c);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxValSetZero(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValSizec(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValSizer(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValSizerc(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxValType(IntPtr pv);

	// these expect StdCall function pointers: Reverse P/Invoke
	public delegate void NewOxExit(int code);
	public delegate String NewOxGets(string str, int n);
	public delegate void NewOxMessage(string str);
	public delegate void NewOxPuts(string str);
	public delegate void NewOxRunMessage(string str);
	public delegate int  NewOxTextWindow(string sAction, string sArg);
	public delegate int  NewOxDraw(string sAction, int iArea, double[] vY, int cY, string sY, double[] vX, int cX, string sX, double[] vZ, int cZ, string sZ, int iSymbol, int iIndex, int[] piArgInt, int cArgInt, double[] pdArgDbl, int cArgDbl);
	public delegate int  NewOxDrawWindow(string, string);

	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetOxExit(NewOxExit pfnNewOxExit);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetOxGets(NewOxGets pfnNewOxGets);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetOxMessage(NewOxMessage pfnNewOxMessage);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetOxPipe(Int32 cPipe);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetOxPuts(NewOxPuts pfnNewOxPuts);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetOxRunMessage(NewOxRunMessage pfnNewOxRunMessage);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetOxTextWindow(NewOxTextWindow pfnNewOxTextWindow);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetOxDraw(NewOxDraw pfnNewOxDraw);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetOxDrawWindow(NewOxDrawWindow pfnNewOxDrawWindow);

	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern string SOxGetTypeName(Int32 iType);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern string SOxIntFunc();

	public enum OxTypes
	{
		OX_INT = 1,
		OX_DOUBLE = 2,
		OX_MATRIX = 3,
		OX_STRING = 4,
		OX_ARRAY = 5,
		OX_FUNCTION = 6,
		OX_CLASS = 7,
		OX_VECTOR = 8,
		OX_INTFUNC = 9,
		OX_RANGE = 10,
		OX_FILE = 11,
		OX_IMPORT = 12,
		OX_LAMBDA = 13,
		OX_BLOB = 14,
		OX_RETURN = 64,

		OX_NULL = 0x100,
		OX_VALUE = 0x200,
		OX_CONST = 0x400,
		OX_RESERVED = 0x800,
		OX_EXTERN = 0x1000,
		OX_GLOBAL = 0x2000,
		OX_STATDECL = 0x4000,
		OX_INLINE = 0x8000,
		OX_KEYWORD = 0x8000,
		OX_MEMBER = 0x10000,
		OX_STATIC = 0x20000,
		OX_VIRTUAL = 0x40000,
		OX_PUBLIC = 0x80000,
		OX_INDEX = 0x100000,
		OX_ADDRESS = 0x200000,
		OX_ARGUMENT = 0x400000,
		OX_VARARGS = 0x800000,
		OX_SERIAL = 0x1000000,
		OX_VECMAT = 0x2000000,
		OX_VECRANGE = 0x4000000,
		OX_IDXSCALAR = 0x8000000,
		OX_INTERNAL = 0x10000000
	}

	public enum OxErrors
	{
		ER_RUNTIME,
		ER_FATAL,
		ER_LIBFUNC,
		ER_STACKOVERFLOW,
		ER_OM,
		ER_NOFUNC,
		ER_DIVIDE,
		ER_EXPOBJECT,
		ER_UNDECLMEM,
		ER_SINGULAR,
		ER_BADOP,
		ER_INCTYPE,
		ER_NULL,
		ER_ARGS,
		ER_BADTYPE,
		ER_IDXBOUND,
		ER_IDXTYPE,
		ER_EXPSCALAR,
		ER_EXPSCALMAT,
		ER_EXPSCALSTR,
		ER_CONSTAS,
		ER_EXPCLASS,
		ER_UNDEFMEMFU,
		ER_NOMEMFUNC,
		ER_UNDEFFU,
		ER_INVALIDCLASS,
		ER_CONSTDEL,
		ER_ADDRESS,
		ER_NEGATIVE,
		ER_SVD,
		ER_CAST,
		ER_IDXRANGE,
		ER_IDXARRAY,
		ER_POWOVERFLOW,
		ER_ARGSAME,
		ER_NOCALLMEM,
		ER_EXPFUNC,
		ER_ARGUMENT,
		ER_IDXMISSING,
		ER_SIZENEGATIVE,
		ER_ARGERROR,
		ER_CALLBACK,
		ER_INVALID,
		ER_OVERFLOW,
		ER_FPEXCEPTION,
		ER_CASTINT,
		ER_CASTDBL,
		ER_CASTMAT,
		ER_CASTVEC,
		ER_USER1,
		ER_USER2,
		ER_USER3,
		ER_USER4,
		ER_USER5,
		ER_USER6,
		ER_EXPVECTOR,
		ER_JSTINVALID,
		ER_ARRAYMULTI,
		ER_NOPIPE,
		ER_USERABORT,
		ER_EXPPUBLIC,
		ER_EXSTRING,
		ER_CONSTUSE,
		ER_LAMBDA,
		ER_VARCHANGED,
		ER_STACK,
		ER_FOR,
		ER_FOR_INF,
		ER_LAST
	}

	public enum OxWarnings
	{
		WR_DECFAILED,
		WR_ITMAX,
		WR_CONCAT,
		WR_CASTINT,
		WR_VECIDXMAT,
		WR_DETERMINANT,
		WR_USER
	}
}
